# nicegui_widgets

./: .components.yaml  .gitignore  .project  .pydevproject  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: build.yml  upload-to-pypi.yml
docs/: index.md
ngwidgets/: __init__.py  ai_chat.py  ai_tasks.py  axes_helper.py  background.py  base_llm.py  basetest.py  claude_llm.py  cmd.py  color_map.py  color_schema.py  combobox.py  components.py  components_view.py  dataclass_yaml.py  dateparser.py  debouncer.py  dict_edit.py  editor.py  file_selector.py  gpx.py  gpxviewer.py  gpxviewer_server.py  image_cropper.py  input_webserver.py  leaflet.js  leaflet.py  leaflet_map.py  live_test.py  llm.py  local_filepicker.py  lod_grid.py  log_view.py  login.py  markup_header.py  mbus_server.py  mbus_viewer.py  mbus_viewer_cmd.py  mbus_viewer_server.py  ngwidgets_cmd.py  (+30 more)
ngwidgets_examples/: ai_tasks.yaml  mbus_examples.yaml  pdfviewer.html  show_example
pytest_tests/: conftest.py  test_dict_edit.py  test_hello_world.py  test_pytest.py
scripts/: blackisort  install  test
search/: search_index.json
tests/: test_ai_tasks.py  test_color_schema.py  test_dateparser.py  test_editor.py  test_file_selector.py  test_gpxviewer.py  test_live_test.py  test_llm.py  test_lod_grid.py  test_markup_header.py  test_mbusparser.py  test_nicegui_components.py  test_open_ai.py  test_pdfviewer.py  test_persistent_log.py  test_server_config.py  test_shorturl.py  test_sso_auth.py  test_taskrunner.py  test_timeout_decorator.py  test_webserver.py  test_widgets.py  test_wikipedia.py  test_yaml.py  test_yamlable.py
