[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngwidgets"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
    "nicegui"
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]

[tool.hatch.version]
path = "ngwidgets/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/nicegui_widgets"
Documentation = "https://wiki.bitplan.com/index.php/nicegui_widgets"
Source = "https://github.com/WolfgangFahl/nicegui_widgets"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["ngwidgets"]

[tool.hatch.build.targets.wheel.sources]
"ngwidgets" = "ngwidgets"

[project.scripts]
ngdemo = "ngwidgets.ngwidgets_cmd:main"
niceuser = "ngwidgets.users:main"

